--- a/app/frontend/template/about.tmpl
+++ b/app/frontend/template/about.tmpl
@@ -1,7 +1,7 @@
 {{define "about"}}
 {{template "header" .}}
   <div>
-    <img src="/static/image/logo.jpg" alt="CloudWeGo" class="col-lg-2 col-md-3 col-sm-4"/>
+    <img src="/static/image/logo.jpg" alt="Douyin Shopping" class="col-lg-2 col-md-3 col-sm-4"/>
     <p>This is community a driven project.</p>
   </div>
 {{template "footer"}}
