--- a/app/frontend/template/footer.tmpl
+++ b/app/frontend/template/footer.tmpl
@@ -3,10 +3,10 @@
 </main>
   <footer>
     <div class="text-bg-primary py-5 text-center">
-      <p>&copy; 2024 <a href="https://github.com/cloudwego" class="text-reset">CloudWeGo</a></p>
+      <p>&copy; 2024 <a href="https://github.com/cloudwego" class="text-reset">Douyin Shopping</a></p>
     </div>
   </footer>
-    <script src="/static/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="/static/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   </body>
 </html>
 {{end}}
